--- a/weeklymovie/pages/weekly/weekly.wxml
+++ b/weeklymovie/pages/weekly/weekly.wxml
@@ -4,7 +4,7 @@
       <view class="container movie-card" bindtap="f1" data-uaer-name="blabla" data-movie-id="{{item.id}}">
         <image class="movie-image" src="{{item.imagePath}}"></image>
         <text>{{item.id}}</text>
-        <text>第{{item.index}}周：{{item.name}}</text>
+        <text>第{{index + 1}}周：{{item.name}}</text>
         <text>豆瓣点评：{{item.comment}}</text>
         <text wx:if="{{item.isHighlyRecommended}}">强烈推荐</text>
         <text catchtap="f0" wx:if="{{index < (weeklyMovieList.length - 1)}}" class='return-button'>返回本周</text>
